--- a/letter.tex
+++ b/letter.tex
@@ -5,14 +5,14 @@
 \usepackage{fontawesome}
 \usepackage{graphicx}
 
-% Sender
+% ################### Sender Details ######################
 \newcommand{\sendername}{John Doe}
 \newcommand{\senderaddress}{Orange Drive, Apt. 404 \\ Appletown, FL 13523}
 \newcommand{\senderphone}{752-203-9849}
 \newcommand{\senderemail}{johndoe@coolmail.com}
 \newcommand{\senderwebsite}{johndoedesigns.com}
 
-% Company
+% ################### Company Details #####################
 \newcommand{\attn}{Hiring Manager}
 \newcommand{\addressedto}{Hiring Manager}
 \newcommand{\company}{Cool Company}
@@ -30,6 +30,8 @@
     \begin{letter}{\textbf{Attn:} \attn, \company}
     
         \opening{Dear \addressedto:}
+        
+        % ################### Letter Body #####################
         
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean rutrum posuere mauris, ac fringilla magna. Fusce efficitur lobortis porta. I am excited to apply for the \textbf{\position} position at \company.
         
